--- a/src/Stayle.css
+++ b/src/Stayle.css
@@ -11,4 +11,15 @@
     margin-top: 3%;
     margin-left: 20%;
     margin-right: 20%;
+    
 }
+#menu{
+    display:flex;
+    margin-Top:3%;
+    justify-Content:space-between;
+    flex-wrap: wrap;
+    gap: 20px;
+    margin-left: 2%;
+    margin-right: 2%;
+}
+
